added mvnDebug alias